--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspading="20">
         <tr>
-            <td><img src="/images/youngwoman_45.png"
+            <td><img src="images/youngwoman_45.png"
                 alt="Rena's profile image" width="60%" height=""></td>
                 <td><h1>Rena Sakata</h1>
                 <p><em>Ramen chef of <strong>Marutama Ramen</strong> and Programming Learner</em></p>
