--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rena's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <table cellspading="20">
         <tr>
             <td><img src="images/youngwoman_45.png"
-                alt="Rena's profile image" width="60%" height=""></td>
+                alt="Rena's profile image" width="" height=""></td>
                 <td><h1>Rena Sakata</h1>
                 <p><em>Ramen chef of <strong>Marutama Ramen</strong> and Programming Learner</em></p>
                 <p>I am a Web Developer. I &#x2764; coffee and baking.</p></td>
@@ -51,7 +53,7 @@
         </tr>
     </table>
     <hr>
-    <a href="#">My Hobbies</a>
+    <a href="hobbies.html">My Hobbies</a>
     <a href="contact-me.html">Contact Me</a>
     
 </body>
